@@ -1,0 +1,4 @@
+<% 
+  ns_adp_stream
+  ns_conn chunked 1
+%><BODY>this is a test</BODY>
